# spawn-python-sdk

./: Makefile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt  setup.cfg  setup.py
example/: actor.py  example.py  joe.py  spawn_example.py  unnamed_actor.py
example/domain/: domain_pb2.py
example/eigr/functions/spawn/example/messages/: messages_pb2.py
example/eigr/functions/spawn/example/state/: joe_pb2.py
example/eigr/messages/: messages_pb2.py
example/eigr/state/: joe_pb2.py
example/protobuf/domain/: domain.proto
example/protobuf/eigr/functions/spawn/example/messages/: messages.proto  messages_pb2.py
example/protobuf/eigr/functions/spawn/example/state/: joe.proto  joe_pb2.py
example/protobuf/eigr/messages/: messages.proto
example/protobuf/eigr/state/: joe.proto
example/protobuf/example/domain/: domain.proto
protobuf/: README.md
protobuf/eigr/: actor.proto  protocol.proto
protobuf/eigr/functions/protocol/actors/: actor.proto  actor_pb2.py  protocol.proto  protocol_pb2.py  state.proto
protobuf/google/protobuf/: any_pb2.py
scripts/: compile-pb.sh  fetch-spawn-pb.sh
spawn/: __init__.py  actor_entity.py  controller.py  entity.py  handler.py  sdk.py  spawn.py  version.py
spawn/eigr/: __init__.py  actor_pb2.py  protocol_pb2.py
spawn/eigr/functions/: actor_settings.py
spawn/eigr/functions/actors/: core.py  kind.py  settings.py
spawn/eigr/functions/actors/api/: actor.py  context.py  metadata.py  reference.py  sdk.py  settings.py  value.py
spawn/eigr/functions/actors/api/decorators/: action.py  actor.py
spawn/eigr/functions/actors/api/workflows/: broadcast.py  effect.py  forward.py  pipe.py
spawn/eigr/functions/actors/decorators/: action.py  actor.py
spawn/eigr/functions/actors/internal/: client.py  controller.py  core.py
spawn/eigr/functions/decorators/: action.py  actor.py
spawn/eigr/functions/protocol/actors/: __init__.py  actor_pb2.py  protocol_pb2.py  state_pb2.py
spawn/flaskr/: action.py
spawn/internal/: controller.py  spawn_actor_controller.py
spawn/routes/: __init__.py  action.py
spawn/test/: test_decorators.py
