[metadata]
url = https://eigr.io/
author = Eigr
license = Apache
license_file = LICENSE
classifiers =
    Intended Audience :: Developers
    License :: OSI Approved :: Apache Software License
    Operating System :: OS Independent
    Programming Language :: Python
    Programming Language :: Python :: 3.6
project_urls =
    Documentation = https://eigr.io/docs
    Source = https://github.com/eigr-labs/spawn-python-sdk

[options]
python_requires = >=3.6
packages = find:
include_package_data = true
zip_safe = false
install_requires =
    attrs == 21.4.0
    google-api == 0.1.12
    googleapis-common-protos == 1.56.4
    grpcio == 1.48.1
    grpcio-tools == 1.0.0
    flask == 2.1.3
    protobuf == 3.20.0
    pytest == 7.1.2

[aliases]
test=pytest

[tool:pytest]
python_files = spawn/test/**/test_*.py